# acr-ingest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  acringest.py  catalog-info.yaml  gen_ref_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  ruff.toml  test_acringest.py
.github/: dependabot.yml
.github/workflows/: release.yaml  schedule.yaml  semantic-release.yaml  test.yaml
docs/: gen_ref_pages.py
reference/SUMMARY/: index.html
reference/acringest/: index.html
search/: search_index.json
tests/: test_acringest.py
