[tool.poetry]
name = "acr-ingest"
version = "0.0.0"
description = "Ingest daily ACRCloud data dumps"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "acringest.py"}]

[tool.poetry.scripts]
acringest = 'acringest:main'

[tool.poetry.dependencies]
python = "^3.11"
cloudevents = "^1.11.1"
ConfigArgParse = "^1.7"
kafka-python-ng = "^2.2.3"
minio = "^7.2.15"
jsondiff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.1.1"
pytest-ruff = "^0.4"
ruff = "^0.11.12"

[tool.pytest.ini_options]
minversion = "8.1"
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=acringest --cov-fail-under=100 --ruff --mypy --ignore docs/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
